[gd_scene load_steps=15 format=2]

[ext_resource path="res://game/gameplay/LevelBase.gd" type="Script" id=1]
[ext_resource path="res://game/ui/Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/ui/Timebar.tscn" type="PackedScene" id=3]
[ext_resource path="res://game/ui/LevelStats.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/textures/ui/buttons/PauseButton1.png" type="Texture" id=5]
[ext_resource path="res://assets/textures/ui/buttons/PauseButton2.png" type="Texture" id=6]
[ext_resource path="res://assets/textures/ui/overlay.png" type="Texture" id=7]
[ext_resource path="res://assets/textures/ui/buttons/ResumePauseButton1.png" type="Texture" id=8]
[ext_resource path="res://assets/textures/ui/buttons/ResumePauseButton2.png" type="Texture" id=9]
[ext_resource path="res://assets/textures/ui/MenuPauseButton1.png" type="Texture" id=10]
[ext_resource path="res://assets/textures/ui/MenuPauseButton2.png" type="Texture" id=11]
[ext_resource path="res://assets/sfx/Selection.ogg" type="AudioStream" id=12]
[ext_resource path="res://game/ui/GameOver.tscn" type="PackedScene" id=13]

[sub_resource type="NavigationPolygon" id=1]

vertices = PoolVector2Array( 7, 7, 125, 7, 125, 198, 7, 198 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]
outlines = [ PoolVector2Array( 7, 198, 125, 198, 125, 7, 7, 7 ) ]

[node name="LevelBase" type="Navigation2D" index="0"]
pause_mode = 2
script = ExtResource( 1 )
_sections_unfolded = [ "Pause", "Transform" ]
level_goal = 180
level_time = 80

[node name="Background" parent="." index="0" instance=ExtResource( 2 )]
pause_mode = 1

[node name="Navigation" type="NavigationPolygonInstance" parent="." index="1"]
pause_mode = 1
navpoly = SubResource( 1 )
enabled = true

[node name="LevelLimits" type="StaticBody2D" parent="." index="2"]
editor/display_folded = true
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="LevelLimits" index="0"]
build_mode = 0
polygon = PoolVector2Array( 0, 0, 144, 0, 144, 200, 125, 200, 125, 24, 32, 24, 32, 32, 7, 32, 7, 200, 0, 200 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="LevelLimits" index="1"]
build_mode = 0
polygon = PoolVector2Array( 0, 256, 144, 256, 144, 198, 0, 198 )
_sections_unfolded = [ "polygon" ]
__meta__ = {
"_edit_lock_": true
}

[node name="PowerSupplies" type="Node2D" parent="." index="3"]
pause_mode = 1
_sections_unfolded = [ "Transform" ]

[node name="Wires" type="Node2D" parent="." index="4"]
pause_mode = 1

[node name="Plugs" type="Node2D" parent="." index="5"]
pause_mode = 1

[node name="Scanners" type="Node2D" parent="." index="6"]
pause_mode = 1

[node name="UI" type="CanvasLayer" parent="." index="7"]
layer = 2
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
_sections_unfolded = [ "Pause" ]

[node name="Timebar" parent="UI" index="0" instance=ExtResource( 3 )]
pause_mode = 1
position = Vector2( 127, 8 )
_sections_unfolded = [ "Animation", "Pause" ]

[node name="LevelStats" parent="UI" index="1" instance=ExtResource( 4 )]
_sections_unfolded = [ "Transform" ]

[node name="BlockScreen" type="Control" parent="UI" index="2"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 144.0
margin_bottom = 256.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Mouse" ]
__meta__ = {
"_edit_lock_": true
}

[node name="PauseButton" type="TextureButton" parent="UI" index="3"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 9.0
margin_top = 9.0
margin_right = 29.0
margin_bottom = 29.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )
stretch_mode = 2
_sections_unfolded = [ "Textures" ]

[node name="Overlay" type="TextureRect" parent="UI" index="4"]
editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 7 )
stretch_mode = 0
_sections_unfolded = [ "Offset" ]

[node name="Resume" type="TextureButton" parent="UI/Overlay" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 80.0
margin_right = 144.0
margin_bottom = 120.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 9 )
expand = true
stretch_mode = 3
_sections_unfolded = [ "Textures" ]

[node name="MainMenu" type="TextureButton" parent="UI/Overlay" index="1"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 104.0
margin_right = 144.0
margin_bottom = 144.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 11 )
expand = true
stretch_mode = 3
_sections_unfolded = [ "Textures" ]

[node name="Click" type="AudioStreamPlayer" parent="UI" index="5"]
stream = ExtResource( 12 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="GameOver" parent="UI" index="6" instance=ExtResource( 13 )]
visible = false

[connection signal="pressed" from="UI/PauseButton" to="UI/Click" method="play"]
[connection signal="pressed" from="UI/Overlay/Resume" to="UI/Click" method="play"]
[connection signal="pressed" from="UI/Overlay/MainMenu" to="UI/Click" method="play"]
